srv/web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
  labels:
    team: gradyent
    owner: davidjeddy
    project: practical
